# mo-delay-agent

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Pipfile  README.rst  amqp.env  delay.sql  delay_agent.py  docker-compose-local.yml  docker-compose.yml  pg.env  pyproject.toml  test_consumer.py  test_end_to_end.py  test_order.py  test_unreliable_rabbitmq.py
.gitlab/: dependabot.yml
.reuse/: dep5
PostgresFakeTimeDocker/: Dockerfile  docker-entrypoint.sh
mo_delay_agent/: config.py  delay_agent.py
tests/: test_config.py  test_consumer.py  test_producer.py
