[tool.poetry]
name = "mo-delay-agent"
version = "0.1.0"
description = "Rammearkitektur AMQP service for making AMQP messages on changing effects in os2mo."
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.0"
python-dateutil = "^2.8.2"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
pre-commit = "^3.0.0"
mypy = "^0.961"
types-python-dateutil = "^2.8.10"

[tool.poetry.group.dev.dependencies]
pytest-split = "^0.8.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopub]
git-username = "MagentaBot"
git-email = "info@magenta.dk"
